--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+# netlify.toml
+[build]
+  command = "npm run build"
+  publish = "dist"
+
 [[redirects]]
   from = "/api/*"
   to = "https://crypto-tracker-zcim.onrender.com/:splat"
