--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.11.0",
+    "aos": "^2.3.4",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.22",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2"
